force-app/main/default/objects/Account/fields/BatchId__c.field-meta.xml
<CustomField>
    <fullName>BatchId__c</fullName>
    <label>Batch Id</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>