force-app/main/default/objects/Account/fields/currentWeek__c.field-meta.xml
<CustomField>
    <fullName>currentWeek__c</fullName>
    <label>Current Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>