force-app/main/default/objects/Account/fields/goodGrade__c.field-meta.xml
<CustomField>
    <fullName>goodGrade__c</fullName>
    <label>Good Grade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>