force-app/main/default/objects/Account/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arlington</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Reston</fullName>
            </value>
            <value>
                <fullName>Tampa</fullName>
            </value>
            <value>
                <fullName>West Virginia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>