force-app/main/default/objects/Account/fields/passingGrade__c.field-meta.xml
<CustomField>
    <fullName>passingGrade__c</fullName>
    <label>Passing Grade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>