force-app/main/default/objects/Account/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <length>100</length>
    <type>Text</type>
</CustomField>