force-app/main/default/objects/Account/fields/Stack__c.field-meta.xml
<CustomField>
    <fullName>Stack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stack</label>
    <referenceTo>Stack__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>